--- a/docs/solana/migration/hotspot-maker.mdx
+++ b/docs/solana/migration/hotspot-maker.mdx
@@ -264,8 +264,8 @@ const App = () => {
 }
 ```
 
-Remove the ability for a new user to link to the Hotspot app. On the Welcome Screen you can now just
-link directly to the black Helium Wallet app.
+Remove the ability for a new user to link to the Hotspot App. On the Welcome Screen you can now just
+link directly to the black Helium Wallet App.
 
 ```tsx
 // src/features/onboarding/welcome/WelcomeScreen.tsx
@@ -331,7 +331,7 @@ fees post Migration.
 Maker Wallets will need `SOL` to pay transaction fees and for minting new Hotspot NFTs. Note that
 minting is only required if Makers are attempting to mint more than 2x their existing fleet size.
 
-- For most makers, ~10 SOL is recommended.
+- For most Makers, ~10 SOL is recommended.
 - Makers with large fleets (300k+ Hotspots) ~60 SOL is recommended.
 
 #### Minting Cost Examples
@@ -362,7 +362,7 @@ For more insight to the amount of SOL needed, check out
 
 ### Maker Wallet DC
 
-Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be aquired by either
+Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be acquired by either
 
 - Depositing DC into the Maker Wallet on the current Helium L1.
 - Use the Helium Wallet App to swap HNT for DC.
@@ -376,7 +376,7 @@ Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be
         src={useBaseUrl('img/wallet-app/wallet-home.png')}
       />
       <p>
-        Use the Orange <code>Swap</code> button on the Helium Wallet App homescreen to swap HNT for
+        Use the Orange <code>Swap</code> button on the Helium Wallet App home screen to swap HNT for
         DC.
       </p>
     </div>
@@ -387,7 +387,7 @@ Maker Wallets will need `DC` to pay Helium onboarding and assert fees. DC can be
         src={useBaseUrl('img/wallet-app/token-swap.png')}
       />
       <p>
-        Select <code>HNT</code> in the first Dropdown to swap for <code>DC</code>.
+        Select <code>HNT</code> in the drop-down list to swap for <code>DC</code>.
       </p>
       <p>
         Use the Maker Wallet in the <code>recipient</code> field.
