--- a/docs/solana/migration/blockchain-api.mdx
+++ b/docs/solana/migration/blockchain-api.mdx
@@ -15,7 +15,7 @@ halt at the time of migration. Knowing that some users will continue to rely on 
 Helium Foundation has formed an agreement with the API provider, BlockJoy, to continue hosting this
 API following the migration.
 
-For ongoing access, several organizations are already building new API services based on the
+For on-going access, several organizations are already building new API services based on the
 [Oracle Data](/oracles/oracle-data) available after the migration. These organizations include (but
 not limited to), [Hotspotty](https://hotspotty.net/api/),
 [HeliumGeek](https://heliumgeek.com/b/helium-offchain-api.html),
