--- a/docs/solana/migration/blockchain-etl.mdx
+++ b/docs/solana/migration/blockchain-etl.mdx
@@ -15,5 +15,5 @@ during the migration. Hosted instances of this service may choose to continue of
 data from the Helium L1 via these synced ETLs. A full snapshot of the Helium L1 will be retained and
 uploaded for public availability post-migration.
 
-For ongoing insight into the operation of the Helium Network post-migration, please refer to the
+For on-going insight into the operation of the Helium Network post-migration, please refer to the
 [Oracle Data](/oracles/oracle-data) documentation.
