--- a/docs/solana/migration/hotspot-software.mdx
+++ b/docs/solana/migration/hotspot-software.mdx
@@ -130,7 +130,7 @@ GW_LISTEN=0.0.0.0:1699
 ## Logging
 
 Before the migration, miner handled writing logs to disk. Post migration, helium_gateway  
-outputs on stdout as it has before. It is up to the Maker to integrate with their system's logging
+outputs on `stdout` as it has before. It is up to the Maker to integrate with their system's logging
 setup. Capturing log output and writing to disk may be handled with a log manager such as `journald`
 or `syslogd`.
 
