--- a/docs/solana/migration/wallet-user.mdx
+++ b/docs/solana/migration/wallet-user.mdx
@@ -10,19 +10,19 @@ slug: /solana/migration/wallet-user
 
 import useBaseUrl from '@docusaurus/useBaseUrl'
 
-This guide provides step-by-step instructions for Helium app, Helium Wallet app, CLI Wallet, and
-Ledger Wallet users to migrate their wallets to the Solana blockchain.
+This guide provides step-by-step instructions for Helium Hotspot App, Helium Wallet App, CLI Wallet, and
+Ledger Wallet users to migrate their Wallets to the Solana blockchain.
 
 Wallet migration is necessary to interact with your HNT, DC, MOBILE, IOT, and Hotspots on the Solana
 blockchain. You can find Hotspot NFTs in the NFT Collectibles section once Helium on Solana goes
 live. Token balances are visible on the account page. You can also create or import multiple
-accounts to a maxium of 10 on the Helium Wallet app.
+accounts to a maximum of 10 on the Helium Wallet App.
 
-Existing HNT and MOBILE tokens in your wallets will remain unchanged by this migration.
+Existing HNT and MOBILE tokens in your Wallets will remain unchanged by this migration.
 
 ## Migration Utility
 
-You can migrate a wallet using the widget below by entering a Helium or Solana wallet address and
+You can migrate a Wallet using the widget below by entering a Helium or Solana Wallet address and
 clicking the "Seed Wallet" buttton.
 
 import { MigrateWallet } from '@theme/MigrateWallet'
@@ -34,29 +34,29 @@ import { MigrateWallet } from '@theme/MigrateWallet'
 :::caution
 
 The Helium Hotspot App is no longer used to manage Tokens or perform Wallet activities and instead
-is only used to manage Original Helium Hotspots and FreedomFi Hotspots.
+is **only** used to manage Original Helium Hotspots and FreedomFi Hotspots.
 
 :::
 
-Helium Hotspot app users must migrate to the Helium Wallet App following these steps.
+Helium Hotspot App users must migrate to the Helium Wallet App following these steps.
 
-To start, ensure your Helium Hotspot app is updated to version **5.0.0** or later and that you have
-downloaded the latest Helium Wallet app version **2.0.0** or higher.
+To start, ensure your Helium Hotspot App is updated to version **5.0.0** or later and that you have
+downloaded the latest Helium Wallet App version **2.0.0** or higher.
 
 <div class="container">
   <div class="row" style={{ marginBottom: 20 }}>
     <div class="col col--12">
       <p>
-        <b>Step 1.</b> Open the Helium Hotspot app.
+        <b>Step 1.</b> Open the Helium Hotspot App.
       </p>
     </div>
   </div>
   <div class="row" style={{ marginBottom: 20 }}>
     <div class="col col--6">
       <p>
-        <b>Step 2.</b>Tap <code>Migrate your Wallet</code> in the Wallet migration popup.
+        <b>Step 2.</b> Tap <code>Migrate your Wallet</code> in the Wallet migration pop-up.
       </p>
-      <p>The Helium Wallet app will automatically open and complete the Wallet migration.</p>
+      <p>The Helium Wallet App will automatically open and complete the Wallet migration.</p>
     </div>
     <div class="col col--6 img-center">
       <img className="appscreen" src={useBaseUrl('img/hotspot-app/migration-screen-0.png')} />
@@ -65,7 +65,7 @@ downloaded the latest Helium Wallet app version **2.0.0** or higher.
   <div class="row" style={{ marginBottom: 20 }}>
     <div class="col col--12">
       <p>
-        <b>Step 2.</b> If you do not see the pop up, tap the Settings menu on the bottom tab bar and
+        <b>Step 2.</b> If you do not see the pop-up, tap the Settings menu on the bottom tab bar and
         then <code>Export Private Key (Migrate Wallet)</code>.
       </p>
     </div>
@@ -87,7 +87,7 @@ downloaded the latest Helium Wallet app version **2.0.0** or higher.
     <div class="col col--6">
       <p>
         <b>Step 2b.</b> Enter a password to secure your private key for migration to the Helium
-        Wallet app.
+        Wallet App.
       </p>
       <p>
         Tap <code>Export to Wallet App.</code>
@@ -108,7 +108,7 @@ downloaded the latest Helium Wallet app version **2.0.0** or higher.
     <div class="col col--12">
       <p>
         <b>Step 3.</b> Now your HNT, DC, MOBILE, and Hotspots have successfully moved to the Helium
-        Wallet app and are ready for the Solana migration.
+        Wallet App and are ready for the Solana migration.
       </p>
     </div>
   </div>
@@ -125,11 +125,11 @@ will remain the same.
 
 ## For Helium Wallet App Users
 
-> Some users may know the Helium Wallet app as the "New Wallet app" or "the black app."
+> Some users may know the Helium Wallet App as the "New Wallet app" or "the black app."
 
-To migrate to Solana, simply update your Helium Wallet app version to 2.0.0 or newer. That’s it!
+To migrate to Solana, simply update your Helium Wallet App version to 2.0.0 or newer. That’s it!
 
-If you have Hotspots in any account, they will appear as an NFT Collectable. All other tokens and
+If you have Hotspots in any account, they will appear as an NFT Collectible. All other tokens and
 their balances are automatically transferred to the Solana Blockchain under the same token name.
 
 Your public Wallet address will change, but your private key and seed phrase (12 or 24 word) will
@@ -139,18 +139,18 @@ remain the same.
 
 ## For CLI Wallet Users
 
-:::caution The Helium CLI Wallet Will Be Depreciated
+:::caution The Helium CLI Wallet Will Be Deprecated
 
 The CLI Wallet will be completely deprecated except for exporting private seed phrases and
 displaying public Solana addresses. Accordingly, common payment and staking transactions should
-utilize the Solana CLI Wallet or the Helium Wallet app.
+utilize the Solana CLI Wallet or the Helium Wallet App.
 
 Check out the [Solana Documentation](https://docs.solana.com/wallet-guide/cli) for more information
 on Solana Command Line Wallets.
 
 :::
 
-In order to migrate a Helium CLI Wallet to Solana, you will need to perform the follwing steps:
+To migrate a Helium CLI Wallet to Solana, you will need to perform the following steps:
 
 1. Inflate/seed your Solana-mapped Helium Wallet on Solana
 2. Export your private key from the Helium CLI Wallet
@@ -174,8 +174,8 @@ the documentation.
 Regarding the **passive means**, you can simply export your Helium private key from the Helium CLI
 Wallet and import the Helium private key into the Helium Wallet App in the manner described in steps
 2 and 3 below. Once the migration window is complete and Helium Network state has been loaded onto
-Solana, you will be able to open the Helium Wallet App and behind the scenes your wallet will be
-inflated on Solana. After that point, you can use the Helium Wallet App to to send HNT or MOBILE
+Solana, you will be able to open the Helium Wallet App and behind the scenes your Wallet will be
+inflated on Solana. After that point, you can use the Helium Wallet App to send HNT or MOBILE
 transactions on Solana Mainnet.
 
 Regarding the **active means**, you can use the
@@ -193,7 +193,7 @@ Starting in Helium CLI Wallet
 [v1.7.11](https://github.com/helium/helium-wallet-rs/releases/tag/v1.7.11), updates were made to the
 `export` command to facilitate exporting private keys in (1) password encrypted QR code format for
 import into the Helium Wallet App, (2) raw format for import into a Solana CLI Wallet, and (3) raw
-format for import into a Phantom wallet. For each situation, example Helium CLI Wallet commands are
+format for import into a Phantom Wallet. For each situation, example Helium CLI Wallet commands are
 provided below:
 
 1. Export raw private key as password encrypted QR code for import into Helium Wallet App
@@ -202,7 +202,7 @@ provided below:
 helium-wallet export --output qr
 ```
 
-After executing the command, you will first be asked to provide the password for your wallet, then
+After executing the command, you will first be asked to provide the password for your Wallet, then
 will be asked to provide, and confirm, a password to encrypt the QR code of your private key. Once
 complete, the command will produce a QR code that can be scanned into the Helium Wallet App, as
 described in further detail in step 3 below.
@@ -213,11 +213,11 @@ described in further detail in step 3 below.
 helium-wallet -f helium_wallet.key export --output seed > solana_wallet.json
 ```
 
-Here, `helium_wallet.key` corresponds to your private key used for your CLI wallet. By default, this
+Here, `helium_wallet.key` corresponds to your private key used for your CLI Wallet. By default, this
 is usually named `wallet.key`. The result of the command is then used to create a Solana private
 key, which we are naming `solana_wallet.json`.
 
-3. Export raw, Solana-compatible private key for import into Phantom wallet
+3. Export raw, Solana-compatible private key for import into Phantom Wallet
 
 ```sh
 helium-wallet export --output seed
@@ -230,30 +230,30 @@ displayed in your terminal / command line window.
 
 Depending on how you exported your private key from the Helium CLI Wallet, you will either (1)
 import your private key into the Helium Wallet App, (2) import your private key into the Solana CLI
-Wallet, or (3) import your private key in Phantom.
+Wallet, or (3) import your private key into Phantom Wallet.
 
 1. Import private key into Helium Wallet App
 
-If you exported your private key in password encrypted QR code form, you will import the private key
+If you exported your private key in password encrypted QR code form, you import the private key
 into the Helium Wallet App. In particular, on the Helium Wallet App, you will need to navigate to
 the CLI QR code reader found at `Add New Account > Import > CLI` and scan the encrypted private key
 produced via the Helium CLI Wallet.
 
-Please note that after scanning the QR code in the Helium Wallet app, you will need to enter the
+Please note that after scanning the QR code in the Helium Wallet App, you will need to enter the
 password provided via the Helium CLI Wallet used to encrypt the QR code export. This password may be
 different than the one used to execute CLI wallet commands.
 
 2. Import private key into Solana CLI Wallet
 
 If you exported your private key in a Solana-compatible form for usage with the Solana CLI Wallet,
-you are all set as the produced `json` file (which we called `solana_wallet.json`) is a bonafide
+you are all set as the produced `json` file (which we called `solana_wallet.json`) is a bona fide
 private key for usage in executing Solana CLI Wallet commands.
 
-3. Import private key into Phantom
+3. Import private key into Phantom Wallet
 
-If you exported your private key for import into Phantom, you will open your Phantom browser
-extension go to the settings menu, select your account, select "Add/Connect Wallet", select "Import
-Private Key", and copy/pasting the full output from the Helium CLI wallet command.
+If you exported your private key for import into Phantom Wallet, you will open your Phantom browser
+extension, go to the settings menu, select your account, select "Add/Connect Wallet", select "Import
+Private Key", and copy/pasting the full output from the Helium CLI Wallet command.
 
 ---
 
@@ -270,7 +270,7 @@ Ledger users will need to update their Helium Ledger App to a version that's pen
 upcoming version will use the Solana private key derivation path that moves all your tokens and
 balances over to Solana.
 
-Your public key will change on Solana but the private key will remain the same.
+Your public key will change on Solana, but the private key will remain the same.
 
 The [Ledger Migration](/solana/migration/ledger) document includes the utilities needed to update
 your Helium Ledger account.
@@ -282,5 +282,5 @@ The Helium Ledger App uses `ED25519` keys, similarly to Solana, but at a differe
 This means that, while seed phrases are the same, private keys are different on Solana.
 
 In order to get around this, when you run the migration, the migration application will ask you to
-use the old derivation path to approve sending all of your Hotspots, tokens, etc to the new
+use the old derivation path to approve sending all of your Hotspots, tokens, etc. to the new
 derivation path.
