--- a/docs/solana/introduction.mdx
+++ b/docs/solana/introduction.mdx
@@ -25,7 +25,7 @@ The migration to Solana took place on April 18, 2023, beginning at 9am PST. The 
 window to complete the migration. Hotspots and LoRaWAN devices continued to operate throughout the
 migration window.
 
-1. The Helium blockchain officially halt.
+1. The Helium blockchain officially halted.
 2. A snapshot was taken of Helium chain state.
 3. Existing $HNT and $MOBILE were mapped to Solana. Hotspots were minted as NFTs.
 4. During the Migration, PoC and Data Transfer continued to function through the off-chain Oracle,
