--- a/docs/home/about-helium.mdx
+++ b/docs/home/about-helium.mdx
@@ -55,7 +55,7 @@ Network infrastructure.
 distributed wireless network by incentivizing participants to contribute resources and share the
 benefits.
 
-**Scalable and Secure:** The network leverages the Solana Blockchain, which is known for its high
+**Scalable and Secure:** The Helium Network leverages the Solana Blockchain, which is known for its high
 scalability, low latency, and robust security.
 
 **Multi-Use Case Support:** The Helium Network supports various use cases, including IoT devices
