--- a/docs/home/helium-history.mdx
+++ b/docs/home/helium-history.mdx
@@ -31,7 +31,7 @@ Hotspots to earn HNT tokens as a reward for providing network coverage.
 ## Expansion and Adoption
 
 As more Hotspots were deployed across the globe, the Helium Network continued to grow, attracting
-interest from developers, companies, and individual users. The network expanded its coverage to
+interest from developers, companies, and individual users. The Helium Network expanded its coverage to
 various countries, enabling new use cases and further solidifying its position as a decentralized
 wireless infrastructure provider.
 
@@ -44,7 +44,7 @@ which was crucial for supporting the increasing number of network participants a
 ## Introduction of Subnetworks and New Tokens
 
 As the Helium Network matured, it diversified its offerings by introducing subnetworks for different
-wireless technologies, such as LoRaWAN and 5G. These subnetworks employed their own tokens, IoT and
+wireless technologies, such as LoRaWAN and 5G. These subnetworks employed their own tokens, IOT and
 MOBILE, and used the unique Proof-of-Coverage consensus algorithm to reward participants for network
 coverage.
 
@@ -52,5 +52,5 @@ coverage.
 
 Today, the Helium Network is a rapidly growing decentralized wireless infrastructure with a global
 footprint. It continues to attract new users, developers, and organizations, paving the way for
-innovative applications and services. As the network expands, it aims to revolutionize the wireless
+innovative applications and services. As the Network expands, it aims to revolutionize the wireless
 communication landscape and further democratize access to connectivity.
