--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -25,12 +25,12 @@ Network tokens.
 
 ## HNT Usage
 
-HNT serves the needs of the two primary parties in the Helium ecosystem:
+HNT serves the needs of the two primary parties in the Helium Ecosystem:
 
 1. **Hotspot Hosts and Operators**. Hosts are rewarded in network tokens like [IOT][iot] or
    [MOBILE][mobile] while deploying and maintaining network coverage. These network tokens are
    redeemable for HNT.
-2. **Enterprises and Developers using the Helium Network** to connect devices and build IoT
+2. **Enterprises and Developers use the Helium Network** to connect devices and build IoT
    applications. [Data Credits][datacredit], which are a $USD-pegged utility token derived from HNT
    in a burn transaction, [are used to pay transaction fees][txn-fees] for wireless data
    transmissions on the Network.
@@ -62,7 +62,7 @@ of 223,000,000 HNT.
 The full token emission schedule can be viewed in the HNT section of the [Token Emissions as of
 Solana Migration][sol-emissions] document.
 
-### Burn and Mint Economics
+### Burn-and-Mint Economics
 
 [Data Credits][datacredit] ("DC") are a $USD-pegged utility token derived from HNT in a burn
 transaction and used to pay [all transaction fees][txn-fees] on the Helium Network. DC is only
@@ -70,7 +70,7 @@ produced by burning HNT.
 
 One Data Credit will always cost $0.00001. Or, $1.00 will always exchange for 100,000 DC.
 
-This HNT to DC relationship is based on a design commonly called a [burn and mint equilibrium][bme]
+This HNT to DC relationship is based on a design commonly called a [Burn-and-Mint Equilibrium][bme] (BME)
 and intends to allow for the supply of HNT to respond to Network usage trends such that the amount
 of HNT that exists remains static month on month. The amount of DC produced by burning HNT will
 increase and decrease based on the USD price of HNT as reported by the HNT [Price
@@ -90,9 +90,9 @@ Below are a few examples of HNT to DC conversion calculations:
 - The current HNT Oracle price is $5.
 - Burning 1 HNT would produce 500,000 DC.
 
-:::important Data Credits are non-transferrable
+:::important Data Credits are non-transferable
 
-Once the burn transaction is complete, the receiving Helium Wallet owns all of the DC and can not
+Once the burn transaction is complete, the receiving Helium Wallet owns all of the DC and **cannot**
 transfer them to any other Helium Wallet.
 
 :::
