--- a/docs/helium-tokens/iot.mdx
+++ b/docs/helium-tokens/iot.mdx
@@ -58,8 +58,8 @@ The emisions schedule was created in [HIP-52][hip-52-emisions] and confirmed in
 | 6    | 167.5B            | 8.125B     | 22.5%                                          | 57.5%                                      | 7%                                   | 7%              | 6%           |
 | 7    | 175.625B          | 8.125B     | 21%                                            | 59%                                        | 7%                                   | 7%              | 6%           |
 
-> Full token emissions can be viewed in the IOT section of the [Token Emissions as of Solana
-> Migration][migration-emissions] document.
+> Full token emissions can be viewed in the IOT section of this document: [Token Emissions as of Solana
+> Migration][migration-emissions].
 
 [^3]: Any IOT not rewarded for data transfer is rolled into Proof of Coverage.
 [^4]: Oracles are not rewarded until additional oracle operators deploy services.
