--- a/docs/helium-tokens/hnt.mdx
+++ b/docs/helium-tokens/hnt.mdx
@@ -59,8 +59,8 @@ of 223,000,000 HNT.
     Year 1 starts on **August 1st, 2019**. The first halving happened on day one of year three,
     **August 1st, 2021**.
 
-The full token emission schedule can be viewed in the HNT section of the [Token Emissions as of
-Solana Migration][sol-emissions] document.
+The full token emission schedule can be viewed in the HNT section of this document: [Token Emissions as of
+Solana Migration][sol-emissions].
 
 ### Burn and Mint Economics
 
