--- a/docs/helium-tokens/mobile.mdx
+++ b/docs/helium-tokens/mobile.mdx
@@ -20,8 +20,7 @@ HIPs<sup>(</sup>[^1]<sup>,</sup>[^2]<sup>,</sup>[^3]<sup>)</sup>.
 [^2]: [HIP-75: MOBILE PoC - Initiate Programmatic Minting][hip-75]
 [^3]: [HIP-77: Solana Parameters][hip-77]
 
-The MOBILE token is mined by 5G Hotspots through both data transfer proceeds as well as Proof of
-Coverage.
+The MOBILE token is mined by 5G Hotspots through both Data transfer proceeds as well as Proof-of-Coverage.
 
 The mint address for MOBILE is [`mb1eu7TzEc71KxDpsmsKoucSSuuoGLv1drys1oP2jh6`][mobile-mint-addr] on
 the Solana blockchain.
@@ -40,9 +39,9 @@ tooling found in the [Helium GitHub repositories][github].
 ## Token Allocation
 
 MOBILE follows a similar minting schedule to HNT, however at a max supply of 230,000,000,000 (230B).
-50B MOBILE were pre-mined at the launch of the network and distributed to the network operations
+50B MOBILE were pre-mined at the launch of the Mobile Network and distributed to the Network operations
 fund administered by the Helium Foundation. A fraction of this allocation was distributed throughout
-the genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started on August 1st, 2022.
+the Genesis period to live Mobile Network Hotspots. Year 1 for MOBILE started on August 1st, 2022.
 
 The issuance is scheduled to have halvings every 2 years, aligning with HNT issuance halvings.
 
@@ -62,8 +61,8 @@ The emission schedule was created in [HIP-53][hip-53-emissions], updated in
 > Full token emissions can be viewed in the MOBILE section of this document: [Token Emissions as of
 > Solana Migration][sol-emisions]
 
-[^4]: Any MOBILE not rewarded for data transfer is rolled into Proof of Coverage.
-[^5]: Oracles are not rewarded until additional oracle operators deploy services.
+[^4]: Any MOBILE not rewarded for Data transfer is rolled into Proof-of-Coverage.
+[^5]: Oracles are not rewarded until additional Oracle operators deploy services.
 [^6]:
     50B pre-mine, 60B max emitted in year one. Only 30B was emitted as no emissions occurred between
     August 2022 and Jan 31st, 2023
