--- a/docs/wallets/wallets.mdx
+++ b/docs/wallets/wallets.mdx
@@ -15,18 +15,18 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
 ## Wallet Migration Guide
 
 All Helium Wallets will need to be migrated to the Solana blockchain. Please refer to the
-[wallet migration guide](/solana/migration/wallet-user) about the different Wallets and what can be
+[Wallet migration guide](/solana/migration/wallet-user) about the different Wallets and what can be
 expected as part of the blockchain migration.
 
 ---
 
 ## 12-Word And 24-Word Seed Phrases
 
-When a Helium Wallet is created with the Helium Wallet app or Helium Hotspot App, a 24-word "Seed
+When a Helium Wallet is created with the Helium Wallet App a 24-word "Seed
 Phrase" is generated.
 
 Users who created their Helium Wallet using the Helium Hotspot App will have a 12-word seed phrase,
-while the Helium Wallet app accepts 12-word seed phrases, all new wallets are created with 24-word
+while the Helium Wallet App accepts 12-word seed phrases, all **new** Wallets are created with 24-word
 seed phrases.
 
 Read more about Helium Wallet [seed phrases here](/wallets/wallet-seed-phrase).
