open lns page restructure

--- a/docs/home/home.mdx
+++ b/docs/home/home.mdx
@@ -32,7 +32,7 @@ import useBaseUrl from '@docusaurus/useBaseUrl'
             <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
           </a>
           <a className="quicklink quicklinkgreen" href="/use-the-network">
-            Build Devices to Use the Network{' '}
+            Use the Network{' '}
             <img className="quicklinkarrow" src={useBaseUrl('img/quicklinkarrow.svg')} />
           </a>
           <a className="quicklink quicklinkred" href="/governance">
