--- a/docs/use-the-network/devices/development/heltec/cubecell-dev-board-plus.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-dev-board-plus.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-dev-board-plus
-title: Htcc-Ab02
+title: HTCC-AB02
 pagination_label: Cubecell Dev Board Plus
-sidebar_label: Htcc-Ab02
+sidebar_label: HTCC-AB02
 description:
   HTCC-AB02 is a Dev-Board. Friendly designed for developers, easy to verify communication
   solutions.
