--- a/docs/use-the-network/devices/development/heltec/cubecell-gps-6502.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-gps-6502.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-gps-6502
-title: Htcc-Ab02S
+title: HTCC-AB02S
 pagination_label: Cubecell GPS 6502
-sidebar_label: Htcc-Ab02S
+sidebar_label: HTCC-AB02S
 description:
   HTCC-AB02S is a Dev-Board. Already integrated AIR530 GPS module, friendly designed for developers,
   easy to verify communication solutions.
