--- a/docs/use-the-network/use-the-network.mdx
+++ b/docs/use-the-network/use-the-network.mdx
@@ -2,7 +2,7 @@
 id: use-the-network
 title: Use the Helium IOT Network
 pagination_label: Use the IOT Network
-sidebar_label: Introduction
+sidebar_label: Use the Helium IOT Network
 description: Use the IOT Network
 image: https://docs.helium.com/img/link-image.png
 slug: /use-the-network
@@ -61,7 +61,7 @@ the two most relevant for developers using the Network.
       />
       <h3>Devices</h3>
       <p className="podtext">
-        Purchase and customize Helium-enabled devices or prototype and build your own.
+        Purchase and customize Helium-enabled devices or prototypes and build your own.
       </p>
       <h5>Quick Links</h5>
       <a className="block" href="/use-the-network/devices/">
@@ -115,10 +115,10 @@ the two most relevant for developers using the Network.
       />
       <h3>Community Projects</h3>
       <p className="podtext">
-        We love seeing community projects that utilise the network in clever new ways.
+        We love seeing community projects that utilize the network in clever new ways.
       </p>
       <a href="/use-the-network/community-projects">
-        Learn More <img className="linkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
+        Learn More <img className="quicklinkarrow" src={useBaseUrl('img/icons/linkarrow.svg')} />
       </a>
       <h5>Quick Links</h5>
       <a className="block" href="/use-the-network/community-projects#agricultural">
