--- a/docs/network-iot/lorawan-on-helium.mdx
+++ b/docs/network-iot/lorawan-on-helium.mdx
@@ -2,7 +2,7 @@
 id: lorawan-on-helium
 title: LoRaWAN On Helium
 pagination_label: LoRaWAN On Helium
-sidebar_label: Introduction
+sidebar_label: LoRaWAN On Helium
 description: Helium Documentation
 image: https://docs.helium.com/img/link-image.png
 slug: /lorawan-on-helium
