--- a/docs/use-the-network/devices/development/heltec/cubecell-solar-sensor.mdx
+++ b/docs/use-the-network/devices/development/heltec/cubecell-solar-sensor.mdx
@@ -1,8 +1,8 @@
 ---
 id: cubecell-solar-sensor
-title: Htcc-Ac02
+title: HTCC-AC02
 pagination_label: Cubecell Solar Sensor
-sidebar_label: Htcc-Ac02
+sidebar_label: HTCC-AC02
 description:
   HTCC-AC02 is a LoRa end node sensor. With a complete enclosure and protection measures, it can be
   deployed directly into real-world applications.
