--- a/docs/use-the-network/find-a-lns-provider.mdx
+++ b/docs/use-the-network/find-a-lns-provider.mdx
@@ -19,12 +19,12 @@ company. Companies may offer public shared servers, and/or private servers.
 The following providers within the Open LNS initiative offer multi-tenant and private instances to
 businesses and individuals.
 
-| Company                 | Service Region | Server Locations | Public/Private   | Pricing                                                                        | Website                                            |
-| ----------------------- | -------------- | ---------------- | ---------------- | ------------------------------------------------------------------------------ | -------------------------------------------------- |
-| IngeniousThings         | Global         | Europe           | Public & Private | Pay-per-message for public or pay-per-month for private and additional support | [https://www.ingeniousthings.fr/][ingeniousthings] |
-| BrDot                   | Latin America  |                  | Public & Private | pay-per-message or pay-per-month basis                                         | [https://brdot.com.br/][brdot]                     |
-| Parley Labs             | USA            |                  | Public & Private |                                                                                | [https://parleylabs.com/][parley-labs]             |
-| Qnectd (by Helium Mart) | Europe         |                  |                  |                                                                                |                                                    |
+| Company                            | Service Region | Server Locations | Public/Private   | Pricing                                                                        |
+| ---------------------------------- | -------------- | ---------------- | ---------------- | ------------------------------------------------------------------------------ |
+| [IngeniousThings][ingeniousthings] | Global         | Europe           | Public & Private | Pay-per-message for public or pay-per-month for private and additional support |
+| [BrDot][brdot]                     | Latin America  |                  | Public & Private | pay-per-message or pay-per-month basis                                         |
+| [Parley Labs][parley-labs]         | USA            |                  | Public & Private |                                                                                |
+| Qnectd (by Helium Mart)            | Europe         |                  |                  |                                                                                |
 
 If you offer public LNS services and would like to add your company to this list, please make a pull
 request and include information for each listed field.
